# mdbook-reading-time

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  deployyml  release.yml
src/: lib.rs  main.rs
