[package]
authors = ["Pawel Urbanek <contact@pawelurbanek.com>"]
name = "mdbook-reading-time"
version = "0.1.3"
edition = "2021"
description = "mdbook preprocessor that calculates the reading time and word count of each chapter."
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities"]

[dependencies]
clap = "4.5.20"
mdbook = { version = "0.4.*", default-features = false }
semver = "1.0.23"
serde_json = "1.0.132"
unicode-segmentation = "1.12.0"

[profile.release]
lto = true

[[bin]]
name = "mdbook-reading-time"
src = "src/main.rs"
